[gd_scene load_steps=58 format=2]

[ext_resource path="res://content/monster/flyer/sheet.png" type="Texture" id=1]
[ext_resource path="res://content/sounds/monster/flyer/FlyerAPPEAR_v2.wav" type="AudioStream" id=2]
[ext_resource path="res://content/sounds/monster/flyer/FlyerDie_v2.wav" type="AudioStream" id=3]
[ext_resource path="res://content/sounds/monster/flyer/FlyerVanish_v2.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/monster/snd_hard_01.wav" type="AudioStream" id=5]
[ext_resource path="res://content/sounds/monster/flyer/FlyerShot_v2.wav" type="AudioStream" id=6]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=7]
[ext_resource path="res://content/sounds/monster/tick/tick_jump.wav" type="AudioStream" id=8]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_03.wav" type="AudioStream" id=9]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_05.wav" type="AudioStream" id=10]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_01.wav" type="AudioStream" id=11]
[ext_resource path="res://content/monster/flyer/Flyer.gd" type="Script" id=12]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_04.wav" type="AudioStream" id=13]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_02.wav" type="AudioStream" id=14]
[ext_resource path="res://content/sounds/monster/flyer/Retro Bat 01.wav" type="AudioStream" id=15]
[ext_resource path="res://systems/audio/Sound.gd" type="Script" id=16]
[ext_resource path="res://content/sounds/monster/flyer/rev.wav" type="AudioStream" id=17]
[ext_resource path="res://content/monster/FlashMaterial.tres" type="Material" id=30]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0416

[sub_resource type="CircleShape2D" id=48]
radius = 15.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 360, 66, 90 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 66, 360, 66, 90 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 66, 90 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 66, 0, 66, 90 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 132, 0, 66, 90 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 198, 0, 66, 90 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 264, 0, 66, 90 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 330, 0, 66, 90 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 396, 0, 66, 90 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 462, 0, 66, 90 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 528, 0, 66, 90 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 594, 0, 66, 90 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 450, 66, 90 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 66, 450, 66, 90 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 132, 450, 66, 90 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 198, 450, 66, 90 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 264, 450, 66, 90 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 330, 450, 66, 90 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 396, 450, 66, 90 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 462, 450, 66, 90 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 270, 66, 90 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 66, 270, 66, 90 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 132, 270, 66, 90 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 198, 270, 66, 90 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 264, 270, 66, 90 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 198, 180, 66, 90 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 264, 180, 66, 90 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 132, 180, 66, 90 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 66, 180, 66, 90 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 0, 180, 66, 90 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 594, 90, 66, 90 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 0, 180, 66, 90 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 66, 180, 66, 90 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 132, 180, 66, 90 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 198, 180, 66, 90 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 264, 180, 66, 90 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 4 ) ],
"loop": true,
"name": "hit",
"speed": 8.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": false,
"name": "shoot",
"speed": 10.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 49 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 50 ) ],
"loop": false,
"name": "grow",
"speed": 10.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": false,
"name": "shrink",
"speed": 10.0
} ]

[node name="Flyer" type="Area2D" groups=["monster"]]
collision_layer = 128
collision_mask = 0
script = ExtResource( 12 )
techId = "flyer"

[node name="HitboxDefault1" type="CollisionShape2D" parent="."]
position = Vector2( -13, -11 )
shape = SubResource( 1 )

[node name="HitboxDefault2" type="CollisionShape2D" parent="."]
position = Vector2( -2, -20 )
shape = SubResource( 48 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 30 )
position = Vector2( 0, -15 )
frames = SubResource( 2 )
animation = "shoot"
frame = 9

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "World"

[node name="DieSound" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 3 )
volume_db = -9.807
bus = "World"
randomVolume = 1.0
randomPitch = 0.2

[node name="DieSound2" parent="DieSound" instance=ExtResource( 7 )]
stream = ExtResource( 15 )
volume_db = -5.0
bus = "World"
randomVolume = 1.0
randomPitch = 0.2

[node name="ShrinkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "World"

[node name="AppearSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -2.185
pitch_scale = 1.52
bus = "World"
script = ExtResource( 16 )

[node name="AppearSound2" type="AudioStreamPlayer" parent="AppearSound"]
volume_db = -12.236
bus = "World"
script = ExtResource( 16 )
streams = [ ExtResource( 17 ) ]

[node name="StunSound" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 8 )
volume_db = -0.227
pitch_scale = 1.53
bus = "World"
randomPitch = 0.18
streams = [ ExtResource( 11 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 10 ) ]

[node name="IsHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -9.745
bus = "World"

[node name="ProjectilePosition" type="Position2D" parent="."]
position = Vector2( 20, 15 )
__meta__ = {
"_gizmo_extents_": 3.0
}

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
